# spark

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  riscv64imac-unknown-none.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
conf/: virt.ld
spark/: Cargo.toml  build.rs  raw_symbol_map.rs
spark/.cargo/: config.toml
spark/conf/: riscv-sbi.ld  riscv-uefi.ld  riscv64-sbi.ld  riscv64gc-unknown-uefi.json  virt.ld
spark/src/: config.rs  io.rs  lib.rs  locore-uefi.s  locore.s  main.rs  malloc.rs  panic.rs  proto.rs  rtld.rs  smp.rs  spark.rs  test.rs  time.rs  trap.rs
spark/src/console/: mod.rs  sbi.rs
spark/src/dev/: acpi.rs  fdt.rs  fw_cfg.rs  mod.rs  pcie.rs
spark/src/dev/block/: mod.rs
spark/src/dev/block/ahci/: mod.rs
spark/src/dev/block/ahci/hba/: mod.rs
spark/src/dev/block/nvme/: controller.rs  identify.rs  mod.rs  queue.rs
spark/src/dev/uart/: mod.rs  ns16550.rs
spark/src/fs/: mod.rs
spark/src/fs/fat/: bpb.rs  dir.rs  mod.rs
spark/src/mem/: mod.rs  pmm.rs  vmm.rs
spark/src/mem/pmm/: freelist_allocator.rs  init_ranges.rs  mod.rs
spark/src/proto/: bootelf.rs  limine.rs
spark/src/sys/: fdt.rs  mod.rs
spark/src/sys/sbi/: locore.s  mod.rs  start.rs
spark/src/sys/uefi/: locore.s  mod.rs  start.rs
spark/src/util/: linkset.rs  maybe_static_arc.rs  mod.rs
src/: io.rs  lib.rs  locore.s  main.rs  malloc.rs  panic.rs  proto.rs  rtld.rs  test.rs
src/dev/: mod.rs  pcie.rs
src/mem/: mod.rs  pmm.rs  vmm.rs
tools/symbol_map/: Cargo.toml
tools/symbol_map/src/: generate.rs  lib.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: build.rs  main.rs  run.rs  util.rs
xtask/: Cargo.toml
xtask/src/: build.rs  main.rs  runner.rs
