[package]
name = "spark"
version = "0.1.0"
edition = "2021"
authors = ["xvanc <xvancm@gmail.com>"]
publish = false
license = "BSD-3-Clause"
description = "A 64-bit bootloader for RISC-V"
readme = "./README.md"
repository = "https://github.com/bolt-os/spark"

[dependencies]
bitflags = "1.3"
bolt-libelf = { git = "https://github.com/bolt-os/libelf" }
libsa = { git = "https://github.com/bolt-os/libsa" }
limine = { git = "https://github.com/bolt-os/limine-rs", features = ["alloc"] }
log = "0.4"
fdt = "0.1"
rustc-demangle = "0.1"
spin = "0.9"

[dependencies.unwinding]
version = "0.1"
default-features = false
features = [ "unwinder", "fde-static", "personality", "panic" ]
