[package]
name = "spark"
version = "0.1.0"
edition = "2021"
authors = ["xvanc <xvancm@gmail.com>"]
publish = false
license = "BSD-3-Clause"
description = "A 64-bit bootloader for RISC-V"
readme = "./README.md"
repository = "https://github.com/bolt-os/spark"

[features]
default = [
    "acpi",
    "fdt",
]
acpi = ["dep:acpi"]
fdt = ["dep:fdt"]

[dependencies]
acpi = { git = "https://github.com/bolt-os/acpi", rev = "8b1520a", optional = true }
anyhow = { version = "1.0", default-features = false }
bitflags = "<2"
bolt-libelf = { git = "https://github.com/bolt-os/libelf" }
fdt = { version = "0.1", optional = true }
libsa = { git = "https://github.com/bolt-os/libsa" }
log = "0.4"
memoffset = "0.8"
rustc-demangle = "0.1"
sbi = "0.2"
spin = "0.9"
uuid = { version = "1.0", default-features = false }

[dependencies.limine]
git = "https://github.com/bolt-os/limine-rs"
rev = "722eef0"
features = ["bootloader"]

[dependencies.unwinding]
version = "0.1"
default-features = false
features = [ "unwinder", "fde-static", "personality", "panic" ]

[target.'cfg(uefi)'.dependencies]
uefi = { git = "https://github.com/bolt-os/uefi", rev = "c654789", features = ["limine"] }
