[package]
name = "spark"
version = "0.1.0"
edition = "2021"
authors = ["xvanc <xvancm@gmail.com>"]
publish = false
license = "BSD-3-Clause"
description = "A 64-bit bootloader for RISC-V"
readme = "./README.md"
repository = "https://github.com/bolt-os/spark"

[lib]
name = "spark"
path = "src/spark.rs"
crate-type = ["staticlib"]

[features]
default = [
    "acpi",
    "fdt",

    "dev-fw_cfg",
    "dev-nvme",
    "dev-pcie",

    "fs-fat",

    "proto-limine",
]

acpi = ["dep:acpi"]
fdt = ["dep:fdt"]

dev-ahci = ["dev-pcie"]
dev-fw_cfg = []
dev-nvme = ["dev-pcie"]
dev-pcie = []

fs-fat = []

proto-bootelf = []
proto-limine = ["limine"]

[dependencies]
acpi = { git = "https://github.com/bolt-os/acpi", rev = "8b1520a", optional = true }
anyhow = { version = "1.0", default-features = false }
bitflags = "2.4"
bolt-libelf = { git = "https://github.com/bolt-os/libelf" }
fdt = { git = "https://github.com/bolt-os/fdt.git", optional = true, features = ["anyhow"] }
libsa = { git = "https://github.com/bolt-os/libsa" }
log = "0.4"
sbi = "0.2"
spin = "0.9"
symbol_map = { path = "../tools/symbol_map" }
uuid = { version = "1.0", default-features = false }

[dependencies.limine]
git = "https://github.com/bolt-os/limine-rs"
rev = "85f7db3"
features = ["bootloader", "uuid"]
optional = true

[dependencies.linkset]
git = "https://github.com/xvanc/linkset.git"
default-features = false
features = ["spin"]

[dependencies.unwinding]
version = "0.2"
default-features = false
features = ["unwinder", "fde-static", "personality", "panic"]

[target.'cfg(uefi)'.dependencies]
uefi = { git = "https://github.com/bolt-os/uefi", rev = "d1510e3", features = ["limine"] }
