[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "*", features = ["derive"] }
llvm-tools = "0.1"
walkdir = "*"
xshell = "*"

[profile.dev]
debug = false