[package]
name = "spark_xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "*", features = ["derive"] }
walkdir = "*"
bolt-libelf = { git = "https://github.com/bolt-os/libelf.git" }
rustc-demangle = "0.1"
xtask = { git = "https://github.com/bolt-os/xtask.git" }

[profile.dev]
debug = false
