[package]
name = "spark_xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bolt-libelf = { git = "https://github.com/bolt-os/libelf.git" }
clap = { version = "*", features = ["derive"] }
rustc-demangle = "0.1.23"
symbol_map = { path = "../symbol_map", features = ["xtask"] }
walkdir = "*"
xtask = { git = "https://github.com/bolt-os/xtask.git" }
